force-app/main/default/objects/UserBankInfo__c/UserBankInfo__c.object-meta.xml
<CustomObject>
    <label>지급은행정보</label>
    <nameField>
        <label>UserBankInfo Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>