force-app/main/default/objects/UserBankInfo__c/fields/ExtId__c.field-meta.xml
<CustomField>
    <fullName>ExtId__c</fullName>
    <description>&apos;PV_EMPNO__c&apos;+&apos;_&apos;+&apos;Seq__c&apos;</description>
    <externalId>true</externalId>
    <label>ExtId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>