force-app/main/default/objects/UserBankInfo__c/fields/IsOilExpenseAccount__c.field-meta.xml
<CustomField>
    <fullName>IsOilExpenseAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>주유비정산계좌여부</description>
    <inlineHelpText>주유비정산계좌여부</inlineHelpText>
    <label>IsOilExpenseAccount</label>
    <type>Checkbox</type>
</CustomField>