force-app/main/default/objects/UserBankInfo__c/fields/PV_ACUSE__c.field-meta.xml
<CustomField>
    <fullName>PV_ACUSE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>사용여부</description>
    <label>PV_ACUSE</label>
    <type>Checkbox</type>
</CustomField>