force-app/main/default/objects/UserBankInfo__c/fields/PV_BANKL__c.field-meta.xml
<CustomField>
    <fullName>PV_BANKL__c</fullName>
    <label>PV_BANKL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
                <label>한국은행(001)</label>
            </value>
            <value>
                <fullName>002</fullName>
                <label>산업은행(002)</label>
            </value>
            <value>
                <fullName>003</fullName>
                <label>기업은행(003)</label>
            </value>
            <value>
                <fullName>004</fullName>
                <label>국민은행(004)</label>
            </value>
            <value>
                <fullName>005</fullName>
                <label>외환은행(005)</label>
            </value>
            <value>
                <fullName>006</fullName>
                <label>국민은행(006)</label>
            </value>
            <value>
                <fullName>007</fullName>
                <label>수협은행(007)</label>
            </value>
            <value>
                <fullName>008</fullName>
                <label>수출입은행(008)</label>
            </value>
            <value>
                <fullName>011</fullName>
                <label>농협은행(011)</label>
            </value>
            <value>
                <fullName>010</fullName>
                <label>농협은행(010)</label>
            </value>
            <value>
                <fullName>012</fullName>
                <label>지역농축협은행(012)</label>
            </value>
            <value>
                <fullName>013</fullName>
                <label>지역농축협은행(013)</label>
            </value>
            <value>
                <fullName>014</fullName>
                <label>지역농축협은행(014)</label>
            </value>
            <value>
                <fullName>015</fullName>
                <label>지역농축협은행(015)</label>
            </value>
            <value>
                <fullName>016</fullName>
                <label>농협은행(016)</label>
            </value>
            <value>
                <fullName>017</fullName>
                <label>지역농축협은행(017)</label>
            </value>
            <value>
                <fullName>018</fullName>
                <label>지역농축협은행(018)</label>
            </value>
            <value>
                <fullName>019</fullName>
                <label>국민은행(019)</label>
            </value>
            <value>
                <fullName>020</fullName>
                <label>우리은행(020)</label>
            </value>
            <value>
                <fullName>021</fullName>
                <label>신한은행(021)</label>
            </value>
            <value>
                <fullName>023</fullName>
                <label>SC은행(023)</label>
            </value>
            <value>
                <fullName>025</fullName>
                <label>하나은행(025)</label>
            </value>
            <value>
                <fullName>026</fullName>
                <label>신한은행(026)</label>
            </value>
            <value>
                <fullName>027</fullName>
                <label>한국씨티은행(027)</label>
            </value>
            <value>
                <fullName>028</fullName>
                <label>신한은행(028)</label>
            </value>
            <value>
                <fullName>029</fullName>
                <label>국민은행(029)</label>
            </value>
            <value>
                <fullName>031</fullName>
                <label>대구은행(031)</label>
            </value>
            <value>
                <fullName>032</fullName>
                <label>부산은행(032)</label>
            </value>
            <value>
                <fullName>033</fullName>
                <label>하나은행(033)</label>
            </value>
            <value>
                <fullName>034</fullName>
                <label>광주은행(034)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>