force-app/main/default/objects/UserBankInfo__c/fields/PV_BKONT__c.field-meta.xml
<CustomField>
    <fullName>PV_BKONT__c</fullName>
    <description>은행관리키</description>
    <label>PV_BKONT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>물대및미지급 결제계좌</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>전도금주류구매계좌</label>
            </value>
            <value>
                <fullName>91</fullName>
                <label>경비계좌</label>
            </value>
            <value>
                <fullName>BC</fullName>
                <label>BC카드 결제계좌(사원)</label>
            </value>
            <value>
                <fullName>HD</fullName>
                <label>현대카드 결제계좌(사원)</label>
            </value>
            <value>
                <fullName>SS</fullName>
                <label>삼성카드 결제계좌(사원)</label>
            </value>
            <value>
                <fullName>X1</fullName>
                <label>구매카드 결제계좌</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>