force-app/main/default/objects/UserBankInfo__c/fields/PV_BVTYP__c.field-meta.xml
<CustomField>
    <fullName>PV_BVTYP__c</fullName>
    <description>은행유형</description>
    <label>PV_BVTYP</label>
    <length>4</length>
    <type>Text</type>
</CustomField>