force-app/main/default/objects/UserBankInfo__c/fields/PV_EMPNO__c.field-meta.xml
<CustomField>
    <fullName>PV_EMPNO__c</fullName>
    <description>사원번호</description>
    <label>PV_EMPNO</label>
    <length>10</length>
    <type>Text</type>
</CustomField>