force-app/main/default/objects/UserBankInfo__c/fields/PV_KOINH__c.field-meta.xml
<CustomField>
    <fullName>PV_KOINH__c</fullName>
    <description>예금주명</description>
    <label>PV_KOINH</label>
    <length>30</length>
    <type>Text</type>
</CustomField>