force-app/main/default/objects/UserBankInfo__c/fields/PV_ZTERM_B1__c.field-meta.xml
<CustomField>
    <fullName>PV_ZTERM_B1__c</fullName>
    <label>PV_ZTERM_B1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>K400</fullName>
                <default>true</default>
                <label>출납일 지정 지급</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>